# Insurence-Agent

./: Docker-compose.yml  EXAMPLES.md  README.md  docker-compose.yml  main.py  pyproject.toml  test_cases.json
backend/: .dockerignore  ARCHITECTURE.md  Dockerfile  README.md  main.py  metrics.py  prometheus.yml  pyproject.toml  rate_limiter.py
backend/db/: db.py  metadata.json  schema.sql
backend/document_agent/: document_identifier.py
backend/documents/EMP001/: DocumentAgent_response.json  Example_medical_prescription.json  hospital_bill.json  hospital_bill.md  lab_report.json  prescription.json  prescription.md
backend/documents/EMP002/: medicine_bill.json
backend/documents/EMP010/: resume (37).json  resume (56).json
backend/documents/TC001/: resume (37).json  resume (37).md  resume (38).json  resume (38).md
backend/documents/TC002/: resume (39).json  resume (39).md  resume (40).json  resume (40).md
backend/documents/TC003/: resume (41).json  resume (41).md  resume (42).json  resume (42).md
backend/documents/TC004/: resume (43).json  resume (43).md  resume (44).json  resume (44).md
backend/middleware/: auth.py
backend/output/: DocumentAgent_response.json  claim_EMP001.json  claim_EMP002.json  claim_EMP010.json  docling_handwritten.md  docling_medicine_bill.md  response_claim.json
backend/services/: data_ingestion.py  policy_claim.py
backend/sub_agent/: README.md  agent.py  decision_maker.py  gaurdrailAgent.py  greetingAgent.py  llm.py  policyAgent.py  routerAgent.py  text_sqlAgent.py
backend/test/: result.json  test.py
frontend/: Dockerfile  (+6 more)
(+50 files in other folders)
