[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.3",
    "flask-cors>=6.0.5",
    "langchain-docling>=2.0.0",
    "openai>=2.41.1",
    "prometheus-client>=0.25.0",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
]
